Updating league details.

--- a/couples-league.html
+++ b/couples-league.html
@@ -84,13 +84,14 @@
           <h3>Couples League on Friday Nights</h3>
           <div class="league-breakdown">
             <p>
-              2025 Couples League is OPEN to any couples that would like to join
-              us for some Friday night golf. Cost is $10 per couple for members
-              and $20 per couple for non-members and includes 9 holes with cart
-              and prize money. $2 of each entry will be set aside for an end of
-              the year meal. You can also sign up each week for proxi prizes
-              which are optional. Proxi contests are $1 per couple for each
-              proxi contest, and it pays back cash.
+              2026 Couples League will run from April 24 - August 28. The league
+              is open to all couples that would like to join us for some Friday
+              night golf. Cost is $10 per couple for members and $20 per couple
+              for non-members and includes 9 holes with cart and prize money. $2
+              of each entry will be set aside for an end of the year meal. You
+              can also sign up each week for proxi prizes which are optional.
+              Proxi contests are $1 per couple for each proxi contest, and it
+              pays back cash.
             </p>
 
             <p>Check in is at 5:00pm and we shotgun at 6:00pm each Friday.</p>
