--- a/mens-league.html
+++ b/mens-league.html
@@ -84,7 +84,7 @@
           <h3>Men's League on Wednesday Nights</h3>
           <div class="league-breakdown">
             <p>
-              League will begin on April 9 and run through August 27 in 2025.
+              League will begin on April 15th and run through August 26th in 2026. 
               Optional proximity contest each week, and the formats change each
               week.
             </p>
@@ -347,17 +347,7 @@
                     <div class="time-line-circle"></div>
                   </div>
                 </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p>
-                      <span class="date">August 27th</span> - Short Course 4 Man
-                      Scramble
-                    </p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
+
               </div>
             </div>
           </div>
