Updating club partners array.

--- a/index.html
+++ b/index.html
@@ -677,10 +677,10 @@
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 col-12">
             <div class="single-solution-style-one h-100">
-              <a href="http://www.burnettauto.com/" target="_blank">
+              <a href="https://www.cfnb.bank/" target="_blank">
                 <img
-                  src="./assets/images/logo/businesses/burnett.svg"
-                  class="logo burnett"
+                  src="./assets/images/logo/businesses/cfnb.png"
+                  class="logo cfnb"
                   alt=""
                 />
               </a>
@@ -688,10 +688,10 @@
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 col-12">
             <div class="single-solution-style-one border-left h-100">
-              <a href="https://paintremodelpros.com/" target="_blank">
+              <a href="http://www.primemhk.com/" target="_blank">
                 <img
-                  src="./assets/images/logo/businesses/CC-logo.png"
-                  class="logo cc"
+                  src="./assets/images/logo/businesses/prime.png"
+                  class="logo prime"
                   alt=""
                 />
               </a>
@@ -796,6 +796,47 @@
               </a>
             </div>
           </div>
+
+
+
+
+          <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+            <div class="single-solution-style-one border-bottom-1 h-100">
+              <a href="http://www.legacycartsmhk.com/" target="_blank">
+                <img
+                  src="./assets/images/logo/businesses/legacy-carts.jpg"
+                  class="logo legacy"
+                  alt=""
+                />
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+            <div class="single-solution-style-one border-bottom-1 h-100">
+              <a href="https://heartlanddoorandwindow.com/" target="_blank">
+                <img
+                  src="./assets/images/logo/businesses/heartland.png"
+                  class="logo heartland"
+                  alt=""
+                />
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+            <div class="single-solution-style-one border-bottom-1 h-100">
+              <a href="javascript:void(0)" style="cursor:default;">
+                <img
+                  src="./assets/images/logo/businesses/levahn.jpg"
+                  class="logo levahn"
+                  alt=""
+                />
+              </a>
+            </div>
+          </div>
+
+
+
+
         </div>
       </div>
     </section>
