Updating Board of Directors, Open Tournaments page, and Members Only Tournaments page.

--- a/meet-the-staff.html
+++ b/meet-the-staff.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Meet The Staff</title>
@@ -20,14 +20,14 @@
       href="assets/css/vendor/bootstrap.min.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
     <link
       rel="stylesheet preload"
       href="assets/css/plugins/metismenu.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
 
     <link rel="stylesheet preload" href="css/style.css" as="style" />
@@ -307,7 +307,8 @@
           <div class="col-12 col-sm-6">
             <ul class="board-list">
               <li>
-                <span class="b">Kevin Kenney</span>, President - kkenney@ksu.edu
+                <span class="b">Kevin Kenney</span>, President -
+                kkenney149@outlook.com
               </li>
               <li>
                 <span class="b">George Mummert</span>, Vice President -
@@ -318,10 +319,10 @@
                 position)
               </li>
               <li>
-                <span class="b">Joe Harris</span>, Treasurer (non board
+                <span class="b">Rob Berard</span>, Treasurer (non board
                 position)
               </li>
-              <li><span class="b">Rob Berard</span> - rob@berardcfo.com</li>
+              <li><span class="b">Brent Cain</span> - bcain_21@yahoo.com</li>
               <li>
                 <span class="b">Lucas Crabtree</span> - lscrabtree02@gmail.com
               </li>
@@ -335,7 +336,8 @@
                 mikebuchanan1960@gmail.com
               </li>
               <li>
-                <span class="b">Marlin Whitney</span> - marlinwhitney1@yahoo.com
+                <span class="b">Steve Preston</span> -
+                stevepreston@sbcglobal.net
               </li>
             </ul>
           </div>
