--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Open Tournaments</title>
@@ -19,14 +19,14 @@
       href="assets/css/vendor/bootstrap.min.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
     <link
       rel="stylesheet preload"
       href="assets/css/plugins/metismenu.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
 
     <link rel="stylesheet preload" href="css/style.css" as="style" />
@@ -84,20 +84,20 @@
         <div class="container-consulting">
           <div class="row">
             <div class="title-center-style-two">
-              <h2 class="title">2025 Open Tournament Schedule</h2>
-              <div class="schedule-note">
+              <h2 class="title">2026 Open Tournament Schedule</h2>
+              <!-- <div class="schedule-note">
                 Click on the tournament for more information and to sign up.
-              </div>
+              </div> -->
             </div>
             <div class="col-lg-12">
               <div class="consulting-step">
                 <div class="timeline-line"></div>
 
-                <div class="single-consulting-one expired">
+                <div class="single-consulting-one">
                   <div class="right-area">
-                    <h4>March Madness 3 Scramble</h4>
-                    <p>Saturday, March 22nd, 10am SG</p>
-                    <a
+                    <h4>March Madness 3 Person Scramble</h4>
+                    <p>Saturday, March 21st, 10am SG</p>
+                    <!-- <a
                       href="https://manager.gallusgolf.com/Tournament/Leaderboard/First/67447"
                       class="pillock"
                       target="_blank"
@@ -108,18 +108,18 @@
                         alt=""
                       />
                       Results
-                    </a>
+                    </a> -->
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
                   </div>
                 </div>
 
-                <div class="single-consulting-one expired">
+                <div class="single-consulting-one">
                   <div class="right-area">
-                    <h4>Stagg Hill Open Two Person Best Ball</h4>
-                    <p>April 26th and 27th, 9am</p>
-                    <a
+                    <h4>Stagg Hill Open 2 Person Best Ball</h4>
+                    <p>Saturday, April 25th - Sunday, April 26th, 8:30 SG</p>
+                    <!-- <a
                       href="https://manager.gallusgolf.com/Tournament/Leaderboard/Index/67449?scoreFormat=Gross&leaderboardType=TeamScramble"
                       class="pillock"
                       target="_blank"
@@ -130,20 +130,18 @@
                         alt=""
                       />
                       Results
-                    </a>
+                    </a> -->
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
                   </div>
                 </div>
 
-                <div class="single-consulting-one expired">
+                <div class="single-consulting-one">
                   <div class="right-area">
                     <h4>Budweiser Open Scramble</h4>
-                    <p>
-                      Saturday, June 7th, 9am SG & Sunday, June 8th, 7:30 TT
-                    </p>
-                    <a
+                    <p>Saturday, June 6th - Sunday, June 8th</p>
+                    <!-- <a
                       href="https://manager.gallusgolf.com/Tournament/Leaderboard/Index/67526?scoreFormat=Gross&leaderboardType=TeamScramble"
                       class="pillock"
                       target="_blank"
@@ -154,17 +152,17 @@
                         alt=""
                       />
                       Results
-                    </a>
+                    </a> -->
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
                   </div>
                 </div>
-                <div class="single-consulting-one expired">
+                <div class="single-consulting-one">
                   <div class="right-area">
                     <h4>Little Apple Slice 2 Lady Scramble</h4>
-                    <p>June 28th, 8:30 SG</p>
-                    <a
+                    <p>Saturday, June 27th, 8:30am SG</p>
+                    <!-- <a
                       href="https://manager.gallusgolf.com/Tournament/Leaderboard/Index/68767?scoreFormat=Gross&leaderboardType=TeamScramble"
                       class="pillock"
                       target="_blank"
@@ -175,68 +173,37 @@
                         alt=""
                       />
                       Results
-                    </a>
+                    </a> -->
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
                   </div>
                 </div>
 
-                <div class="single-consulting-one expired">
+                <div class="single-consulting-one">
                   <div class="right-area">
-                    <h4>1 Couple Scramble</h4>
-                    <p>Saturday, July 12th, 9am</p>
+                    <h4>Couples Tourney 1 Couple Scramble</h4>
+                    <p>Saturday, July 11th, 9am SG</p>
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
                   </div>
                 </div>
-                <div class="single-consulting-one expired">
-                  <div class="right-area">
-                    <h4>Night Golf</h4>
-                    <p>Friday, August 22nd, 8:30pm SG</p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one expired">
-                  <div class="right-area">
-                    <h4>Night Golf 4 Person Scramble</h4>
-                    <p>Sunday, August 31st, 9am SG</p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-
-                <div class="single-consulting-one expired">
+                <div class="single-consulting-one">
                   <div class="right-area">
                     <h4>Folds of Honor 4 Person Scramble</h4>
-                    <p>Sunday, August 31st, 9am SG</p>
-                    <a
-                      href="https://manager.gallusgolf.com/Tournament/Leaderboard/First/67530"
-                      class="pillock"
-                      target="_blank"
-                    >
-                      <img
-                        class="pillock-icon register injectable"
-                        src="assets/images/svgs/results.svg"
-                        alt=""
-                      />
-                      Results
-                    </a>
+                    <p>Sunday, September 6th, 9am SG</p>
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
                   </div>
                 </div>
 
-                <div class="single-consulting-one expired">
+                <div class="single-consulting-one">
                   <div class="right-area">
                     <h4>Swinney/Wickham Memorial 4 Person Scramble</h4>
-                    <p>Sunday, September 21st, 9am SG</p>
-                    <a
+                    <p>Sunday, September 20th, 9am SG</p>
+                    <!-- <a
                       href="https://manager.gallusgolf.com/Tournament/Leaderboard/First/67532"
                       class="pillock"
                       target="_blank"
@@ -247,17 +214,17 @@
                         alt=""
                       />
                       Results
-                    </a>
+                    </a> -->
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
                   </div>
                 </div>
 
-                <div class="single-consulting-one expired">
+                <div class="single-consulting-one">
                   <div class="right-area">
                     <h4>Fall Fling 2 Person Shamble</h4>
-                    <p>Sunday, October 12th, 9am SG</p>
+                    <p>Sunday, October 11th, 9am SG</p>
                     <!-- <a
                       href="https://manager.gallusgolf.com/Register/67533/fall-fling-2-shamble"
                       class="pillock"
@@ -276,11 +243,11 @@
                   </div>
                 </div>
 
-                <div class="single-consulting-one expired">
+                <div class="single-consulting-one">
                   <div class="right-area">
                     <h4>2 Cup, 4 Person Scramble</h4>
-                    <p>Sunday, November 16th, 10:30am SG</p>
-                    <a
+                    <p>Sunday, November 8th, 10am SG</p>
+                    <!-- <a
                       href="https://manager.gallusgolf.com/Tournament/Leaderboard/First/67534"
                       class="pillock"
                       target="_blank"
@@ -291,7 +258,7 @@
                         alt=""
                       />
                       Results
-                    </a>
+                    </a> -->
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
@@ -300,6 +267,13 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <section style="background-color: white;">
+      <div class="container">
+        <div class="hr-group">
+          <hr />
         </div>
       </div>
     </section>
@@ -313,7 +287,7 @@
           <div class="col-lg-12">
             <div class="title-center-2">
               <h3 class="title">
-                Thank You to Our 2025 Tournament
+                Thank You to Our 2026 Tournament
                 <br class="title-br" />Sponsors!
               </h3>
               <div
@@ -358,10 +332,10 @@
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 col-12">
             <div class="single-solution-style-one h-100">
-              <a href="http://www.burnettauto.com/" target="_blank">
+              <a href="https://www.cfnb.bank/" target="_blank">
                 <img
-                  src="./assets/images/logo/businesses/burnett.svg"
-                  class="logo burnett"
+                  src="./assets/images/logo/businesses/cfnb.png"
+                  class="logo cfnb"
                   alt=""
                 />
               </a>
@@ -369,10 +343,10 @@
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 col-12">
             <div class="single-solution-style-one border-left h-100">
-              <a href="https://paintremodelpros.com/" target="_blank">
+              <a href="http://www.primemhk.com/" target="_blank">
                 <img
-                  src="./assets/images/logo/businesses/CC-logo.png"
-                  class="logo cc"
+                  src="./assets/images/logo/businesses/prime.png"
+                  class="logo prime"
                   alt=""
                 />
               </a>
@@ -443,7 +417,10 @@
             <div
               class="single-solution-style-one border-left border-bottom-1 h-100"
             >
-              <a href="http://www.mcgrawsmanhattan.com/" target="_blank">
+              <a
+                href="https://www.facebook.com/mcgrawsmanhattan/"
+                target="_blank"
+              >
                 <img
                   src="./assets/images/logo/businesses/mcgraws.svg"
                   class="logo mcgraws"
@@ -469,6 +446,40 @@
                 <img
                   src="./assets/images/logo/businesses/willies.png"
                   class="logo willies"
+                  alt=""
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+            <div class="single-solution-style-one border-bottom-1 h-100">
+              <a href="http://www.legacycartsmhk.com/" target="_blank">
+                <img
+                  src="./assets/images/logo/businesses/legacy-carts.jpg"
+                  class="logo legacy"
+                  alt=""
+                />
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+            <div class="single-solution-style-one border-bottom-1 h-100">
+              <a href="https://heartlanddoorandwindow.com/" target="_blank">
+                <img
+                  src="./assets/images/logo/businesses/heartland.png"
+                  class="logo heartland"
+                  alt=""
+                />
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+            <div class="single-solution-style-one border-bottom-1 h-100">
+              <a href="javascript:void(0)" style="cursor: default">
+                <img
+                  src="./assets/images/logo/businesses/levahn.jpg"
+                  class="logo levahn"
                   alt=""
                 />
               </a>
