--- a/members-only-events.html
+++ b/members-only-events.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Members Only Events</title>
@@ -20,14 +20,14 @@
       href="assets/css/vendor/bootstrap.min.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
     <link
       rel="stylesheet preload"
       href="assets/css/plugins/metismenu.css"
       as="style"
       media="print"
-      onload="this.media='all'"
+      onload="this.media = 'all'"
     />
 
     <link rel="stylesheet preload" href="css/style.css" as="style" />
@@ -86,7 +86,7 @@
               data-wow-delay=".9s"
             >
               <div class="career-banner-wrapper">
-                <div class="event-date">April 12th - 13th</div>
+                <div class="event-date">April 11th - 12th</div>
                 <h2 class="title">Member Member Masters Pro-Am</h2>
                 <p class="disc">
                   Two Member Scramble
@@ -103,13 +103,13 @@
                   proximity prizes, skins, draft on Friday evening with drink
                   ticket and appetizers, and lunch on Sunday.
                 </p>
-                <a
+                <!-- <a
                   href="https://manager.gallusgolf.com/Tournament/Leaderboard/First/67448"
                   class="rts-btn btn-primary btn-bold"
                   target="_blank"
                 >
                   Results
-                </a>
+                </a> -->
               </div>
             </div>
             <div
@@ -190,12 +190,12 @@
                   Third Round Matches played: June 12- July 9<br />
                   Final Matches played: July 10-31<br />
                 </p>
-                <a
+                <!-- <a
                   href="https://manager.gallusgolf.com/Register/67703/stagg-hill-match-play"
                   class="rts-btn btn-primary btn-bold"
                   target="_blank"
                   >Sign Up Your Team Here</a
-                >
+                > -->
               </div>
             </div>
           </div>
@@ -298,11 +298,11 @@
                   src="assets/images/logo/member-guest.svg"
                   alt=""
                 />
-                <div class="event-date">July 19th - 20th</div>
+                <div class="event-date">July 18th - 19th</div>
                 <h2 class="title">Stagg Hill Member Guest Tournament</h2>
                 <p class="disc">
                   Format: 2 person scramble on the front nine, shamble on the
-                  back 9, Saturday and Sunday.
+                  back 9, Saturday and Sunday. 8:30am SG.
                 </p>
                 <p>
                   Entry Fee: $350 per team includes practice round Friday, Horse
@@ -311,13 +311,13 @@
                   Saturday, lunch Saturday, dinner and calcutta event Saturday
                   evening, breakfast & lunch on Sunday.
                 </p>
-                <a
+                <!-- <a
                   href="https://manager.gallusgolf.com/Register/67528/stagg-hill-member-guest-2025"
                   class="rts-btn btn-primary btn-bold"
                   target="_blank"
                 >
                   Sign Up Your Team Here
-                </a>
+                </a> -->
               </div>
             </div>
           </div>
@@ -333,10 +333,10 @@
               data-wow-delay=".1s"
             >
               <div class="career-banner-wrapper">
-                <div class="event-date">August 16th - 17th</div>
+                <div class="event-date">August 15th - 16th</div>
                 <h2 class="title">Stagg Hill Club Championship</h2>
                 <p class="IKOB-Italic">
-                  Open to all members of Stagg Hill Golf Club.
+                  Open to all members of Stagg Hill Golf Club. 8:30am SG.
                 </p>
                 <p>
                   Entry Fee: $40pp for Club Championship / $20pp extra for
@@ -352,13 +352,13 @@
                   Entry includes golf, range balls, cash prizes, & lunch on
                   Sunday.
                 </p>
-                <a
+                <!-- <a
                   href="https://manager.gallusgolf.com/Register/67529/stagg-hill-club-championship-2025"
                   class="rts-btn btn-primary btn-bold"
                   target="_blank"
                 >
                   Click Here to Sign Up
-                </a>
+                </a> -->
               </div>
             </div>
             <div
@@ -392,7 +392,7 @@
       <div class="container">
         <div class="row flex-column align-items-center text-center">
           <h3>
-            <span class="italicized">Reach out</span> for 2025 sponsorship
+            <span class="italicized">Reach out</span> for 2026 sponsorship
             opportunities.
           </h3>
           <a
