Adding link to Open Tournaments page.

--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -97,18 +97,18 @@
                   <div class="right-area">
                     <h4>March Madness 3 Person Scramble</h4>
                     <p>Saturday, March 21st, 10am SG</p>
-                    <!-- <a
-                      href="https://manager.gallusgolf.com/Tournament/Leaderboard/First/67447"
+                    <a
+                      href="https://signup.golf/event?e=25882&ce=de7c32"
                       class="pillock"
                       target="_blank"
                     >
                       <img
                         class="pillock-icon injectable"
-                        src="assets/images/svgs/results.svg"
+                        src="assets/images/svgs/register.svg"
                         alt=""
                       />
-                      Results
-                    </a> -->
+                      Register
+                    </a>
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
