Adding registration link to tourney.

--- a/members-only-events.html
+++ b/members-only-events.html
@@ -103,13 +103,13 @@
                   proximity prizes, skins, draft on Friday evening with drink
                   ticket and appetizers, and lunch on Sunday.
                 </p>
-                <!-- <a
-                  href="https://manager.gallusgolf.com/Tournament/Leaderboard/First/67448"
+                <a
+                  href="https://signup.golf/event?e=26097&ce=09f1c2"
                   class="rts-btn btn-primary btn-bold"
                   target="_blank"
                 >
-                  Results
-                </a> -->
+                  Register Here
+                </a>
               </div>
             </div>
             <div
