Adding registration link to tourney.

--- a/members-only-events.html
+++ b/members-only-events.html
@@ -95,7 +95,7 @@
                   >. Your team will have chances to win in 2 formats. The Member
                   Member scramble format along with the Pro-Am format where your
                   team score will be added to your pros score. This event will
-                  be fighted based on number of team entries after the
+                  be flighted based on number of team entries after the
                   tournament just as we do for Open tournaments.
                 </p>
                 <p>
