Updating tournament information.

--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -119,18 +119,18 @@
                   <div class="right-area">
                     <h4>Stagg Hill Open 2 Person Best Ball</h4>
                     <p>Saturday, April 25th - Sunday, April 26th, 8:30 SG</p>
-                    <!-- <a
-                      href="https://manager.gallusgolf.com/Tournament/Leaderboard/Index/67449?scoreFormat=Gross&leaderboardType=TeamScramble"
+                    <a
+                      href="https://signup.golf/event?e=26095&ce=191004"
                       class="pillock"
                       target="_blank"
                     >
                       <img
                         class="pillock-icon register injectable"
-                        src="assets/images/svgs/results.svg"
+                        src="assets/images/svgs/register.svg"
                         alt=""
                       />
-                      Results
-                    </a> -->
+                      Register
+                    </a>
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
