Updating tournament registration links.

--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -193,6 +193,18 @@
                   <div class="right-area">
                     <h4>Folds of Honor 4 Person Scramble</h4>
                     <p>Sunday, September 6th, 9am SG</p>
+                     <a
+                      href="https://charitygolftoday.com/event?e=26203&ce=423d70"
+                      class="pillock"
+                      target="_blank"
+                    >
+                      <img
+                        class="pillock-icon register injectable"
+                        src="assets/images/svgs/register.svg"
+                        alt=""
+                      />
+                      Register
+                    </a>
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
@@ -203,18 +215,18 @@
                   <div class="right-area">
                     <h4>Swinney/Wickham Memorial 4 Person Scramble</h4>
                     <p>Sunday, September 20th, 9am SG</p>
-                    <!-- <a
+                    <a
                       href="https://manager.gallusgolf.com/Tournament/Leaderboard/First/67532"
                       class="pillock"
                       target="_blank"
                     >
                       <img
                         class="pillock-icon register injectable"
-                        src="assets/images/svgs/results.svg"
+                        src="assets/images/svgs/register.svg"
                         alt=""
                       />
-                      Results
-                    </a> -->
+                      Register
+                    </a>
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
